Bug fixes(19/11) -nav button description length issue -table cursor change -model button alignment -modify/ok buttons with title

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -117,6 +117,10 @@
               right: 30px;            
             }
             .title{
+              max-width: 180px;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
               font-size: 16px;
               color: $NavTitle;              
               font-weight: bold;
@@ -124,16 +128,19 @@
               margin-bottom: 3px;
             }
             .desc{
-              max-width: 140px;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              max-width: 180px;
               font-size: 16px;
               color: $NavTitle;                   
               font-weight: normal;
               line-height: 1.06;
               margin: 0;
-              display: -webkit-box;
-              -webkit-line-clamp: 2;
-              -webkit-box-orient: vertical;  
-              overflow: hidden;            
+              //display: -webkit-box;
+              //-webkit-line-clamp: 2;
+              //-webkit-box-orient: vertical;
+              //overflow: hidden;
             }
           }
         }
